# py-tasty

./: README.md  pyproject.toml
src/: __init__.py  asserts.py  case.py  cli.py  fixture.py  parametrize.py  suite.py
tests/: test_case.py  test_parametrize.py  test_suite.py
