[tool.poetry]
name = "py-tasty"
version = "0.1.0"
description = ""
authors = ["Dmitry Mishanov <d.mishanov@cian.ru>"]
readme = "README.md"
packages = [{include = "py_tasty"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = '^7.3.1'
isort = '^5.11.2'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
